--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "ulid": "^3.0.1",
+    "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
   "devDependencies": {
